setup project files part1

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "type":"module",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "dev": "nodemon src/index.js"
+    },
   "keywords": [
     "javascript",
     "backend",
