connect to mongo atlas

--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "chae-aur-backend",
   "version": "1.0.0",
   "description": "backend at chaeaurcode",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "type": "module",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "keywords": [
     "javascript",
@@ -17,5 +18,11 @@
   "devDependencies": {
     "nodemon": "^3.0.1",
     "prettier": "^3.5.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "mongoose": "^8.15.1",
+    "moongoose": "^0.0.5"
   }
 }
